--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "angular2_simple_userapp_server",
   "version": "0.0.1",
-  "description": "A server code for the Angular 2 simple User app",
+  "description": "A server code for serving data to the Angular 2 simple User app",
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon"
   },
   "repository": {
     "type": "git",
