CORS implemented for development, since front-end app is listening on another port

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DB_NAME=test
-DB_PORT=27017
+DB_NAME=users_ng2_app
+DB_USER=ogyman
+DB_PASS=jevremovic93
+DB_CONNECTION=ds157459.mlab.com:57459
 PORT=4000
